# localGPT

./: README.md  pyproject.toml  settings.yaml
src/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
src/frontend/src/app/: layout.tsx  page.tsx
src/frontend/src/client/: index.ts
src/frontend/src/client/models/: Body_ingest_file_api_ingest_file_post.ts  ChatBody.ts  Chunk.ts  ChunksBody.ts  ChunksResponse.ts  CompletionsBody.ts  ContextFilter.ts  Embedding.ts  EmbeddingsBody.ts  (+9 more)
src/frontend/src/components/: clear-files.tsx  footer.tsx  header.tsx  ingested-files.tsx  new-document.tsx
src/frontend/src/hooks/: use-enter-submit.tsx
src/frontend/src/utils/: api-responses.ts  types.ts
src/localGPT/: __init__.py  __main__.py  _paths.py  di.py  launcher.py  main.py  scripts.py
src/localGPT/components/: __init__.py  _ingest_helper.py  _prompt_helper.py  embedding.py  ingest.py  llm.py  node_store.py  vector_store.py
src/localGPT/open_ai/: __init__.py  models.py
src/localGPT/open_ai/extensions/: context_filter.py
src/localGPT/server/: __init__.py
src/localGPT/server/chat/: __init__.py  router.py  service.py
src/localGPT/server/chunks/: __init__.py  router.py  service.py
src/localGPT/server/completions/: router.py
src/localGPT/server/embeddings/: router.py  service.py
src/localGPT/server/health/: router.py
src/localGPT/server/ingest/: __init__.py  model.py  router.py  service.py  watcher.py
src/localGPT/settings/: __init__.py  settings.py  settings_loader.py  yaml.py
src/localGPT/ui/: __init__.py  ui.py
(+27 files in other folders)
