[tool.poetry]
name = "localGPT"
version = "0.1.0"
description = ""
authors = ["Nikhil Ravi <nr337@cornell.edu>"]
readme = "README.md"
packages = [{include = "localGPT", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
llama-index = { extras = ["local_models"], version = "^0.9.22" }
transformers = "^4.36.2"
qdrant-client = "^1.7.0"
injector = "^0.21.0"
fastapi = { extras = ["all"], version = "^0.108.0" }
watchdog = "^3.0.0"
pypdf = "^3.17.4"
ebooklib = "^0.18"
html2text = "^2020.1.16"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[tool.poetry.group.ui]
optional = true
[tool.poetry.group.ui.dependencies]
gradio = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
localGPT_setup = "localGPT.scripts:setup"
localGPT_wipe = "localGPT.scripts:wipe_local_data" 